force-app/main/default/objects/cgcloud__Vehicle_Warehouse__c/cgcloud__Vehicle_Warehouse__c.object-meta.xml
<CustomObject>
    <description>This Object holds the relationship between Vehicle and Warehouse.</description>
    <label>Vehicle Warehouse</label>
    <nameField>
        <displayFormat>VW-{00000}</displayFormat>
        <label>Vehicle Warehouse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Warehouses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>