force-app/main/default/objects/cgcloud__Vehicle_Warehouse__c/fields/cgcloud__Vehicle__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Vehicle__c</fullName>
    <description>Reference to the vehicle.</description>
    <label>Vehicle</label>
    <referenceTo>cgcloud__Vehicle__c</referenceTo>
    <relationshipLabel>Warehouses</relationshipLabel>
    <relationshipName>Warehouses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>