force-app/main/default/objects/cgcloud__Vehicle_Warehouse__c/fields/cgcloud__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Warehouse__c</fullName>
    <description>Reference to the warehouse.</description>
    <label>Warehouse</label>
    <referenceTo>cgcloud__Warehouse__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>