force-app/main/default/objects/cgcloud__Vehicle_Warehouse__c/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(cgcloud__Vehicle__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Warehouse__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Vehicle and the Warehouse must have the same Sales Org.</errorMessage>
</ValidationRule>